Fix compilation issue with generic
Signed-off-by: Ameziane H <ameziane.hamlat@consensys.net>